# sortviz

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.txt  sortviz.data  sortviz.html  sortviz.html.mem  sortviz.js  sortviz.wasm
.github/workflows/: build_and_deploy.yml
include/: arraywrapper.hpp  config.hpp  ftfont.hpp  shader.hpp  sort.hpp  sorts.hpp  viz.hpp
include/glad/: glad.h
res/: roboto_mono_font_license.txt
shaders/: colorloop.vert  text.frag  text.vert  varietyloop.frag  varietyloop.vert
src/: arraywrapper.cpp  fragment_shader.frag  ftfont.cpp  glad.c  main.cpp  shader.cpp  sort.cpp  sorts.cpp  vertex_shader.vert  viz.cpp
src/sorts/: bubblesort.cpp  insertionsort.cpp  quicksort.cpp  selectionsort.cpp
